# rl-ai

./: .env  .gitignore  .python-version  GEMINI.md  README.md  aws-train-advanced-hover.py  aws-train-altitude-ppo.py  aws-train-altitude.py  aws-train-basic-hover-ppo.py  aws-train-basic-hover.py  aws-train-ppo.py  aws-train-sac.py  dev-requirements.txt  pyproject.toml
.gemini/commands/: build.toml  save_trained_models.toml
input/expert_dataset/: expert_episode_000.json  expert_episode_001.json  expert_episode_002.json  expert_episode_003.json  expert_episode_004.json  expert_episode_005.json  expert_episode_006.json  expert_episode_007.json  expert_episode_008.json  expert_episode_009.json  expert_episode_010.json  expert_episode_011.json  expert_episode_012.json  expert_episode_013.json  expert_episode_014.json  (+75 more)
scripts/: generate_expert_data.py
src/: altitude_curriculum_wrapper.py  basic_hover_curriculum_wrapper.py  common.py  drone_env.py  drone_hrl_wrapper.py  drone_wrappers.py  env_utils.py  export_utils.py  flight_controller.py  pid_controller.py  requirements.txt  round_action_wrapper.py  settings.py  test_drone_render.py  train.py  train_advanced_hover.py  train_altitude_curriculum.py  train_altitude_curriculum_ppo.py  train_basic_hover.py  train_basic_hover_ppo.py  train_ppo.py  train_sac.py
tests/: debug_utils.py  test_angle_mode.py  test_angle_mode_batch.py  test_conversion.py  test_drone_render.py  test_hrl_wrapper_params.py  test_inference.py  test_onnx_model.py  test_train_ppo.py  test_train_sac.py
trained_models/: model_phase_4_final_sac.tflite
(+106 files in other folders)
