[project]
name = "rl-ai"
version = "0.1.0"
description = "Reinforcement Learning training pipeline with ParallelSAC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0+cpu",
    "onnx==1.16.2",
    "onnxruntime==1.19.2",
    "stable-baselines3",
    "gymnasium[mujoco]",
    "imageio[ffmpeg]",
    "moviepy",
    "pygame",
    "setuptools<70.0.0",
    "pybullet",
    "urdf-parser-py",
    "litert-torch"
]

[project.optional-dependencies]
dev = [
    "boto3>=1.42.2",
    "sagemaker>=3.0.0",
    "google-genai"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pip-tools]
allow-unsafe = true
strip-extras = true
index-url = "https://pypi.org/simple"
extra-index-url = [
    "https://download.pytorch.org/whl/cpu"
]
